@startuml

title __ADMIN's Class Diagram__\n

  namespace  {
    namespace om.emotorstore.controller {
      namespace admin {
        class com.emotorstore.controller.admin.AdminHome {
            + adminPage()
            + customerManagement()
            + productInventory()
        }
      }
    }
  }
  

  namespace  {
    namespace om.emotorstore.controller {
      namespace admin {
        class com.emotorstore.controller.admin.AdminProduct {
            - path : Path
            + addProduct()
            + addProductPost()
            + deleteProduct()
            + editProduct()
            + editProductPost()
        }
      }
    }
  }
  

  com.emotorstore.controller.admin.AdminHome o-- com.emotorstore.service.CustomerService : customerService
  com.emotorstore.controller.admin.AdminHome o-- com.emotorstore.service.ProductService : productService
  com.emotorstore.controller.admin.AdminProduct o-- com.emotorstore.service.ProductService : productService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
